# sfind

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: arg.rs  config.rs  environ.rs  error.rs  finder.rs  main.rs  output.rs  sf.rs
